--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -12,4 +12,5 @@
     <string name="clipboard_copy">Testo scopiazzato negli appunti</string>
     <string name="invalid_params">Parametri non validi</string>
     <string name="too_high_numbers">Ellamadonna! Metti dei numeri più bassi</string>
+    <string name="pick_random">Prendi a muzzo</string>
 </resources>
