--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="clipboard_copy">Copied to clipboard</string>
     <string name="invalid_params">Invalid parameters</string>
     <string name="too_high_numbers">Insert lower numbers</string>
+    <string name="pick_random">Pick random</string>
 </resources>
