--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="invalid_params">Invalid parameters</string>
     <string name="too_high_numbers">Insert lower numbers</string>
     <string name="pick_random">Pick random</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="close">Close</string>
+    <string name="share">Share</string>
+    <string name="saved_gallery">Saved to gallery</string>
+    <string name="save_gallery">Save to gallery</string>
 </resources>
