--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="share">Share</string>
     <string name="saved_gallery">Saved to gallery</string>
     <string name="save_gallery">Save to gallery</string>
+    <string name="add_favourite">Add to favourites</string>
+    <string name="remove_favourite">Remove from favourites</string>
+    <string name="added">Added</string>
+    <string name="scan_qr_code">Scan QR Code</string>
 </resources>
