--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PorcumIpsum</string>
+    <string name="app_name">Porcum Ipsum</string>
     <string name="generator">Generator</string>
     <string name="picker" translatable="false">Picker</string>
     <string name="list">List</string>
@@ -23,5 +23,7 @@
     <string name="add_favourite">Add to favourites</string>
     <string name="remove_favourite">Remove from favourites</string>
     <string name="added">Added</string>
-    <string name="scan_qr_code">Scan QR Code</string>
+    <string name="scan_qr_code" translatable="false">Scan QR Code</string>
+    <string name="app_info_tab"><u>More info</u></string>
+    <string name="visit_website">Visit website</string>
 </resources>
