--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="visit_website">Visit website</string>
     <string name="copy">Copy</string>
     <string name="delete">Delete</string>
+    <string name="error_saving">Unable to save file</string>
 </resources>
